Pull from branch

--- a/Pipfile
+++ b/Pipfile
@@ -13,7 +13,7 @@ flask = "~=1.1.1"
 flask-httpauth = "~=3.3.0"
 gunicorn = "~=20.0.4"
 requests = "~=2.23.0"
-snap-api-prototype = {editable = true,git = "https://github.com/18F/snap-api-prototype.git"}
+snap-api-prototype = {editable = true,git = "https://github.com/18F/snap-api-prototype.git",ref = "ars/setup-setup"}
 
 [requires]
 python_version = "3.8.1"
