--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -32,6 +32,7 @@ jobs:
       - run:
           name: Run the server
           command: make serve
+          no_output_timeout: 10s
 
       - save_cache:
           paths:
